--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,9 @@
       <div class="container">
         <%= link_to "Fake-stagram", '/', id: "logo" %>
         <nav>
+          <ul class="nav navbar-nav navbar-left">
+            <li><%= link_to "Your Profile",   '#' %></li>
+          </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "Sign up",   '#' %></li>
             <li><%= link_to "Log in", '#' %></li>
