user can log in and out

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -14,10 +14,12 @@
         <%= f.password_field :password, class: 'form-control' %>
 
         <%= f.label :password_confirmation, "Confirmation" %>
-        <%= f.password_field :password_confirmation, class: 'form-control' %>
+        <%= f.password_field :password_confirmation, class: 'form-control', id: 'password_confirmation' %>
 
         <%= f.submit "Create my account", class: "btn btn-primary" %>
       <% end %>
+      <br>
+      <p>Already have an account? <%= link_to "Log in!", login_path %></p>
     </div>
   </div>
 </div>
