--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,9 +20,12 @@
             <li><%= link_to "Your Profile",   '#' %></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to "Sign up",   '#' %></li>
-            <li><%= link_to "Log in", '#' %></li>
-            <li><%= link_to "Log out", '#' %></li>
+            <% if logged_in? %>
+              <li><%= link_to "Log out", logout_path, method: :delete %></li>
+            <% else %>
+              <li><%= link_to "Sign up", signup_path %></li>
+              <li><%= link_to "Log in", login_path %></li>
+            <% end %>
           </ul>
         </nav>
       </div>
