users can post and delete captions

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
         <nav>
           <ul class="nav navbar-nav navbar-left">
             <li><%= link_to "Your Profile",   '#' %></li>
+            <li><%= link_to "New Post", posts_new_path %></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <% if logged_in? %>
