profile page added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
         <%= link_to "Fake-stagram", '/', id: "logo" %>
         <nav>
           <ul class="nav navbar-nav navbar-left">
-            <li><%= link_to "Your Profile",   '#' %></li>
+            <li><%= link_to "Your Profile", '/profile' %></li>
             <li><%= link_to "New Post", posts_new_path %></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
