--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,7 +6,12 @@
         <div id="post_format">
           <h4 class="user_name"><%= post.user.name %></h4>
           <p id="time"><%= post.updated_at.strftime("%e %b %Y") %></p>
-          <h2><span id="post_content"><%= simple_format(post.caption) %></span></h2>
+          <div class="card_center" style="width: 40rem;">
+            <%= image_tag post.image.variant(resize: "1010 x 1010") %>
+          </div>
+          <div class="card-body">
+            <h2><span id="post_content"><%= simple_format(post.caption) %></span></h2>
+            </div>
         </div>
         <% if post.user == current_user %>
           <%= link_to '❌ DELETE', "posts/#{post.id}", method: :delete, id: "delete-#{post.id}" %>
