--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -3,7 +3,7 @@
     <div class="col-md-6 col-md-offset-3">
       <%= form_for @post do |f| %>
         <%= render 'shared/error_messages' %>
-
+        <%= f.file_field :image %>
         <%= f.label :caption %>
         <%= f.text_field :caption, class: 'form-control' %>
 
